--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!--Sitemin Header Alanı-->
     <header>
-      <a href="logo">Logo</a>
+      <a href="Web Studio">Web Studio</a>
       <nav>
         <ul>
           <li><a href="studio">Studio</a></li>
@@ -93,7 +93,7 @@
     <!--Sitemin Main Alanı Bitti-->
     <!--Sitemin Footer Alanı-->
     <footer>
-      <a href="logo">Logo</a>
+      <a href="Web Studio">Web Studio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
