--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <a href="index.html">Web Studio</a>
       <nav>
         <ul>
-          <li><a href="studio">Studio</a></li>
-          <li><a href="Portfolloc">Portfolloc</a></li>
-          <li><a href="Contacts">Contacts</a></li>
+          <li><a href="index.html">Studio</a></li>
+          <li><a href="index.html">Portfolloc</a></li>
+          <li><a href="index.html">Contacts</a></li>
         </ul>
       </nav>
       <!--İletişim bilgileri-->
